09_traefik/test-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.passHostHeader: "true"
    traefik.backend.loadbalancer.sticky: "true"
spec:
  rules:
    - host: demo.p82.it
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: test-service
                port:
                  number: 80
